fix: implemented SEO meta

--- a/baohiemankhanghanhphuc.html
+++ b/baohiemankhanghanhphuc.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -131,7 +131,7 @@
         <ul style="list-style:number; line-height: 150%;">
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm Tử vong</li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Lựa chọn Quyền lợi Cơ bản hoặc Quyền lợi vượt trội<br />
             - Quyền lợi Cơ bản (Giá trị tích lũy cao): Bằng giá trị lớn hơn giữa Số tiền bảo hiểm tử vong và Giá trị Tài
             khoản Hợp đồng tại thời điểm xảy ra tử vong<br />
@@ -142,14 +142,14 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Thương tật nghiêm trọng do tai nạn
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Chi trả quyền lợi bằng 100% Quyền lợi bảo hiểm Tử vong
           </p>
 
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bệnh hiểm nghèo giai đoạn cuối lên đến 500 triệu đồng
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Hỗ trợ ứng trước 50% Quyền lợi Tử vong và số tiền này sẽ được đối trừ khi chi trả các quyền lợi khác hoăc
             khi chấm dứt hợp đồng
           </p>
@@ -157,7 +157,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Tử vong do tai nạn mở rộng lên đến 10 tỷ đồng (áp dụng cho Gói VIP2, VIP3)
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             - Tai nạn máy bay: 200% Số tiền bảo hiểm tử vong do tai nạn mở rộng
             <br />
             - Tai nạn thông thường: 100% Số tiền bảo hiểm tử vong do tai nạn mở rộng
@@ -166,14 +166,14 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm các Bệnh nan y lên đến 2,5 tỷ đồng (áp dụng cho Gói VIP2, VIP3)
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Bảo vệ trước bệnh Ung thư giai đoạn đầu và cuối, đột quỵ, nhồi máu cơ tim
           </p>
 
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi chăm sóc y tế lên đến 2 tỷ đồng (áp dụng cho Gói VIP3)
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             - Trợ cấp viện phí cơ bản: lên đến 2 triệu đồng/ngày<br />
             - Trợ cấp viện phí đặc biệt: lên tới 4 triệu đồng/ngày<br />
             - Hỗ trợ chi phí phẫu thuật: lên tới 10 triệu đồng/lần<br />
@@ -206,7 +206,7 @@
             Tài khoản Hợp đồng tại Ngày kỷ niệm Hợp đồng lần thứ 10 và lần thứ 20.</p>
           <li style="font-weight: 600; color: #0060ae;">Hưởng Quyền lợi Thưởng gia tăng giá trị tài khoản:
           </li>
-          <p style="margin-top:0;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị tài
+          <p style="margin:0;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị tài
             khoản
             Hợp đồng khi Hợp
             đồng thỏa mãn quy định tại Điều khoản. Hợp đồng càng có giá trị lớn thì quyền lợi Thưởng càng cao.
@@ -321,7 +321,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
