--- a/baohiemantamhoachdinh.html
+++ b/baohiemantamhoachdinh.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -125,10 +125,10 @@
       <div>
         <ul style="list-style:number; line-height: 150%;">
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi đáo hạn</li>
-          <p style="margin-top:0;">Khách hàng được nhận 100% Giá trị Tài khoản Hợp đồng tại Ngày đáo hạn hợp đồng.</p>
+          <p style="margin:0;">Khách hàng được nhận 100% Giá trị Tài khoản Hợp đồng tại Ngày đáo hạn hợp đồng.</p>
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi Thưởng duy trì Hợp đồng
           </li>
-          <p style="margin-top:0;">Các khoản thưởng dành cho Khách hàng gắn kết bền vững được trả vào Tài khoản Đóng
+          <p style="margin:0;">Các khoản thưởng dành cho Khách hàng gắn kết bền vững được trả vào Tài khoản Đóng
             thêm tại Ngày kỷ niệm hợp
             đồng lần thứ 5, 10, 15 và 20, bao gồm:
             <br />
@@ -265,7 +265,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
