--- a/baohiemantamhocvan.html
+++ b/baohiemantamhocvan.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -137,7 +137,7 @@
         <ul style="list-style:number; line-height: 150%;">
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm Tử vong</li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Chi trả số tiền lớn hơn giữa 100% Số tiền bảo hiểm tử vong và Giá trị Tài khoản Hợp đồng tại thời điểm xảy
             ra rủi ro
           </p>
@@ -145,14 +145,14 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm Bệnh hiểm nghèo
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Ứng trước 50% Quyền lợi bảo hiểm Tử vong, tối đa 500 triệu đồng
           </p>
 
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Miễn đóng phí bảo hiểm các bệnh lý nghiêm trọng:
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             Miễn toàn bộ phí bảo hiểm định kỳ trong tương lai, đồng thời Hợp đồng vẫn được duy trì với đầy đủ các quyền
             lợi bảo hiểm cho con trẻ
           </p>
@@ -160,7 +160,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo vệ Cha mẹ (Bên mua bảo hiểm) khi mắc 1 trong 46 bệnh lý nghiêm trọng
           </li>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             - Quyền lợi hỗ trợ tài chính: các khoản hỗ trợ tài chính sẽ được trả định kỳ hàng năm cho đến khi nhận quyền
             lợi Học vấn lần đầu tiên hoặc chấm dứt hợp đồng
             <br />
@@ -280,7 +280,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
