--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -5,6 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm cháy, nổ bắt buộc</title>
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Mua bảo hiểm cháy nổ bắt buộc, bảo hiểm tài sản, khách sạn, nhà cửa uy tín. Đăng ký dễ dàng - nhận tư vấn miễn phí - bảo vệ toàn diện khỏi rủi ro hỏa hoạn.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords"
+    content="bảo hiểm cháy nổ bắt buộc, mua bảo hiểm cháy nổ, bảo hiểm khách sạn, bảo hiểm tài sản, bảo hiểm hỏa hoạn, bảo hiểm nhà cửa">
+
+  <!-- Open Graph (Facebook, Zalo, etc.) -->
+  <meta property="og:title" content="Mua Bảo Hiểm Cháy Nổ Bắt Buộc - Bảo Vệ Tài Sản & Nhà Cửa Uy Tín" />
+  <meta property="og:description"
+    content="Bảo hiểm cháy nổ - bảo vệ tài sản, khách sạn, nhà cửa khỏi hỏa hoạn. Mua dễ dàng, nhận hợp đồng nhanh, tư vấn miễn phí." />
+  <meta property="og:image"
+    content="https://baovietonline.com.vn/uploads/product/3970c4a9f76a9a1ea2111f5970671736.jpg" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/bao-hiem-chay-no.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card (optional) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Mua Bảo Hiểm Cháy Nổ Bắt Buộc - An Tâm Mỗi Ngày">
+  <meta name="twitter:description"
+    content="Giải pháp an toàn cho nhà cửa, khách sạn, tài sản – bảo hiểm cháy nổ giá tốt, pháp lý đầy đủ.">
+  <meta name="twitter:image"
+    content="https://baovietonline.com.vn/uploads/product/3970c4a9f76a9a1ea2111f5970671736.jpg">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -48,7 +72,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -153,7 +177,7 @@
           <p style="font-weight: 600; margin:0;">Bảo hiểm cho rủi ro Cháy và Nổ theo quy định của pháp luật về Bảo
             hiểm Cháy, Nổ
             bắt buộc</p>
-          <p style="margin-top:0;">Áp dụng cho toàn bộ tài sản của cơ sở có nguy hiểm về cháy, nổ, bao gồm:<br />
+          <p style="margin:0;">Áp dụng cho toàn bộ tài sản của cơ sở có nguy hiểm về cháy, nổ, bao gồm:<br />
             a. Nhà, công trình và các tài sản gắn liền với nhà, công trình; máy móc, thiết bị.<br />
             b. Các loại hàng hóa, vật tư (bao gồm cả nguyên vật liệu, bán thành phẩm, thành phẩm).</p>
         </div>
@@ -171,11 +195,11 @@
         <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
 
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Giấy yêu cầu bảo hiểm</p>
+              <p style="margin:0;">Giấy yêu cầu bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/giay-yeu-cau-bao-hiem-bao-hiem-chay-no-bat-buoc-vi.xlsx">
@@ -185,11 +209,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Tờ rơi</p>
+              <p style="margin:0;">Tờ rơi</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/to-roi-bao-hiem-chay-no-bat-buoc-vi.pdf">
@@ -236,7 +260,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
