--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm oto, xe máy</title>
+  <meta name="description"
+    content="So sánh & mua bảo hiểm ô tô bắt buộc, vật chất xe giá rẻ, từ các nhà cung cấp uy tín. Hỗ trợ nhanh, thanh toán online, giao giấy tờ tận nơi.">
+  <meta name="keywords"
+    content="bảo hiểm ô tô bắt buộc, bảo hiểm vật chất xe ô tô, mua bảo hiểm ô tô, bảo hiểm ô tô giá rẻ, bảo hiểm ô tô uy tín">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -48,7 +52,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -174,11 +178,11 @@
         <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
 
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Danh sách Garage liên kết với BHBV</p>
+              <p style="margin:0;">Danh sách Garage liên kết với BHBV</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/danh-sach-garage-lien-ket-voi-bhbv-bao-hiem-vat-chat-xe-o-to-vi.xlsx">
@@ -188,11 +192,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Quy tắc bảo hiểm vật chất Ô Tô</p>
+              <p style="margin:0;">Quy tắc bảo hiểm vật chất Ô Tô</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/quy-tac-bao-hiem-vat-chat-o-to-bao-hiem-vat-chat-xe-vi-1710993149.pdf">
@@ -239,7 +243,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
