--- a/baohiemruirotaisan.html
+++ b/baohiemruirotaisan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>An Phát Cát Tường</title>
+  <title>Bảo hiểm mọi rủi ro tài sản </title>
   <meta name="description"
     content="Chọn bảo hiểm nhân thọ uy tín để đảm bảo tài chính cho gia đình và bảo vệ tương lai. Khám phá các gói bảo hiểm từ các công ty bảo hiểm đáng tin cậy.">
   <meta name="keywords"
@@ -12,9 +12,8 @@
   <meta property="og:title" content="Bảo hiểm nhân thọ uy tín – Đảm bảo tài chính vững chắc cho gia đình">
   <meta property="og:description"
     content="Khám phá bảo hiểm nhân thọ uy tín với các gói bảo hiểm chất lượng, giúp bạn bảo vệ tài chính gia đình và xây dựng tương lai ổn định.">
-  <meta property="og:image"
-    content="https://baovietnhantho.com.vn/storage/8df54043-65f1-450c-8ce7-ca7f1e05ee07/AnPhatCatTuong-cover.jpg">
-  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemanphatcattuong.html">
+  <meta property="og:image" content="https://baovietonline.com.vn/uploads/product/80fd8ab11b9488ac9385a3a62d0902b3.png">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemruirotaisan.html">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -81,16 +80,15 @@
   <div class="container">
 
     <div class="card-block">
-      <img src="https://baovietnhantho.com.vn/storage/8df54043-65f1-450c-8ce7-ca7f1e05ee07/AnPhatCatTuong-cover.jpg"
-        alt="" srcset="">
+      <img src="https://baovietonline.com.vn/uploads/product/80fd8ab11b9488ac9385a3a62d0902b3.png" alt="" srcset="">
       <div class="content">
         <div style="display: flex; flex-direction: column; gap: 10px; width: 60%;">
           <p
             style="text-transform: capitalize; font-size: 24px; font-weight: 600; color: #0060ae; margin: 0; line-height: normal;">
-            Bảo hiểm liên kết chung An Phát Cát Tường 2024</p>
+            Bảo hiểm mọi rủi ro tài sản</p>
           <p style="margin: 0; font-size: 14px;">
-            Thành công hôm nay và vững vàng ngày mai với sự chăm sóc và đầu tư vào Bảo Việt Nhân thọ cùng sản phẩm bảo
-            hiểm liên kết chung An Phát Cát Tường 2024, giúp bạn luôn vững tin vào một tương lai tươi sáng.
+            Giải pháp bảo vệ toàn diện tài sản của doanh nghiệp trước những tổn thất vật chất bất ngờ, không lường trước
+            được như cháy, nổ, thiên tai, động đất, bạo động, đình công, rối loạn dân sự.
           </p>
         </div>
 
@@ -113,89 +111,44 @@
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/0537f8e14db87f4cfe2276e9409a5317.png" alt="" srcset="">
-        <p style="font-size: 14px;">12 Quyền lợi trong 1 Hợp đồng duy nhất</p>
+        <p style="font-size: 14px;">Đội ngũ chuyên gia hàng đầu trong lĩnh vực bảo hiểm tài sản</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/ec5162fc50c250e779284add2bc241de.png" alt="" srcset="">
-        <p style="font-size: 14px;">Quyền lợi bảo hiểm Tử vong do tai nạn lên đến 15 tỷ</p>
+        <p style="font-size: 14px;">Cung cấp mạng lưới khai thác rộng khắp cả nước với dịch vụ chăm sóc khách hàng 24/7
+        </p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/88de92111393edc20eb0ebc9a30af9a0.png" alt="" srcset="">
-        <p style="font-size: 14px;">Quyền lợi bảo hiểm Bệnh Ung thư/ Đột quỵ lên đến 2,5 tỷ đồng và Chăm sóc y tế lên
-          đến 2 tỷ đồng cho Trợ cấp nằm viện và Phẫu thuật</p>
+        <p style="font-size: 14px;">Tư vấn quản lý rủi ro và khuyến cáo các biện pháp đề phòng hạn chế tổn thất hiệu quả
+        </p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/88de92111393edc20eb0ebc9a30af9a0.png" alt="" srcset="">
-        <p style="font-size: 14px;">Có thể đóng toàn bộ phí 1 lần, bảo vệ lên đến 20 năm</p>
+        <p style="font-size: 14px;">Giải quyết bồi thường nhanh chóng với năng lực chuyên môn cao, giàu kinh nghiệm xử
+          lý các vụ bồi thường lớn và phức tạp</p>
       </div>
     </div>
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        BẢO VỆ</p>
+        Khách hàng</p>
       <div>
         <ul style="list-style:number; line-height: 150%;">
-          <li style="color: #0060ae; font-weight: 600;">
-            Quyền lợi bảo hiểm Tử vong (2 lựa chọn)</li>
-          <p style="margin:0;">
-            Quyền lợi Cơ bản (Giá trị tích lũy cao): Bằng giá trị lớn hơn giữa Số tiền bảo hiểm tử vong và Giá trị Tài
-            khoản Hợp đồng tại thời điểm xảy ra tử vong
-            Quyền lợi Vượt trội (Giá trị bảo vệ cao): Bằng tổng của Số tiền bảo hiểm tử vong và Giá trị Tài khoản Hợp
-            đồng tại thời điểm xảy ra tử vong.
-          </p>
+          <li>
+            Các cơ quan chính quyền</li>
 
-          <li style="color: #0060ae; font-weight: 600;">
-            Quyền lợi Thương tật nghiêm trọng do tai nạn
+          <li>
+            Các nhà máy, xí nghiệp
           </li>
-          <p style="margin:0;">
-            - Quyền lợi cơ bản: Chi trả số tiền lớn hơn giữa Số tiền bảo hiểm Thương tật nghiêm trọng do tai nạn và Giá
-            trị Tài khoản Hợp đồng
-            <br />
-            - Quyền lợi vượt trội: Chi trả số tiền bằng tổng của Số tiền bảo hiểm Thương tật nghiêm trọng do tai nạn và
-            Giá trị Tài khoản Hợp đồng
 
-          </p>
-
-          <li style="color: #0060ae; font-weight: 600;">
-            Quyền lợi Bệnh hiểm nghèo giai đoạn cuối:
+          <li>
+            Các tổ chức đơn vị, cá nhân khác
           </li>
-          <p style="margin:0;">
-            Ứng trước 50% Quyền lợi bảo hiểm Tử vong, lên đến 500 triệu đồng
-            Miễn phí bảo hiểm rủi ro của Quyền lợi Tử vong và Quyền lợi thương tật nghiêm trọng do tai nạn
-          </p>
-
-          <li style="color: #0060ae; font-weight: 600;">
-            Quyền lợi Nâng cao tùy chọn
-          </li>
-          <p style="margin:0;">
-            <b>4.1. Quyền lợi tử vong do tai nạn mở rộng lên đến 10 tỷ đồng</b>
-            <br />
-            - 200% Số tiền bảo hiểm của Quyền lợi này Đối với tai nạn trên chuyến bay thương mại
-            <br />
-            - 100% Số tiền bảo hiểm của Quyền lợi này Đối với tai nạn thông thường
-            <br />
-            <b>4.2 Quyền lợi chăm sóc y tế:</b> Chi trả lên đến 1.000 lần Số tiền bảo hiểm Chăm sóc y tế, tương đương 2
-            tỷ đồng
-            cho Quyền lợi Trợ cấp viện phí và Quyền lợi Trợ cấp phẫu thuật.
-            <br />
-            - Trợ cấp viện phí cơ bản
-            <br />
-            - Trợ cấp viện phí đặc biệt
-            <br />
-            - Hỗ trợ chi phí phẫu thuật
-            <br />
-            - Hỗ trợ chi phí vận chuyển cấp cứu
-            <br />
-            <b>4.3 Quyền lợi bệnh ung thư:</b> trả tối đa lên đến 100% Số tiền bảo hiểm Bệnh ung thư.
-            <br />
-            <b>4.4 Quyền lợi bệnh tai biến mạch máu não - đột quỵ:</b> chi trả tối đa lên đến 100% Số tiền bảo hiểm Bệnh
-            đột
-            quỵ.
-          </p>
         </ul>
       </div>
     </div>
@@ -203,81 +156,75 @@
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        ĐẦU TƯ TIẾT KIỆM</p>
+        Phạm vi bảo hiểm</p>
       <div>
+        <p>
+          Đối tượng được bảo hiểm là các tài sản hữu hình trong quá trình sản xuất kinh doanh hoặc sử dụng trong cuộc
+          sống hàng ngày mà Người được bảo hiểm có quyền sở hữu hoặc quyền quản lý trông coi như:
+        </p>
         <ul style="list-style:number; line-height: 150%;">
-          <li style="font-weight: 600; color: #0060ae;">Quyền lợi đáo hạn:
+          <li>Nhà ở, nhà xưởng, công trình xây dựng, vật tư kiến trúc đã đưa
+            vào sử dụng và các trang thiết bị kèm theo;
           </li>
-          <p style="line-height: normal; line-height: 150%;">Khi Người được bảo hiểm sống đến độ tuổi mà Quý khách đã
-            lựa chọn
-            để nhận Quyền lợi đáo
-            hạn tại thời điểm
-            yêu cầu bảo hiểm, Bảo Việt Nhân thọ sẽ chi trả toàn bộ 100% Giá trị Tài khoản Hợp đồng (sau khi trừ các
-            khoản nợ (nếu có)).
-          </p>
-          <li style="font-weight: 600; color: #0060ae;">Khách hàng được hưởng lãi suất đầu tư
-            <span style="color: black; font-weight: normal;">được công bố sau khi kết thúc mỗi năm tài chính và không
-              thấp hơn lãi suất cam kết tối thiểu.</span>
+          <li>Máy móc thiết bị, phương tiện lao động phục vụ sản xuất kinh
+            doanh;
           </li>
-          <li style=" font-weight: 600; color: #0060ae;">Hưởng Quyền lợi Duy trì hợp đồng.
+          <li>Các loại hàng hóa, vật tư (bao gồm cả nguyên vật liệu, thành
+            phẩm, bán thành phẩm);
           </li>
-          <li style="font-weight: 600; color: #0060ae;">Hưởng Quyền lợi Thưởng gia tăng giá trị tài khoản:
+          <li>Các tài sản khác.
           </li>
-          <p style="margin: 0; line-height: 150%;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng
-            vào Giá trị tài khoản
-            Hợp đồng khi Hợp
-            đồng thỏa mãn quy định tại Điều khoản. Hợp đồng càng có giá trị lớn thì quyền lợi Thưởng càng cao.
-          </p>
-          <li style="font-weight: 600; color: #0060ae;">Quyền lợi thưởng gia tăng đầu tư:
-          </li>
-          <p style="margin: 0; line-height: 150%;">Giá trị Tài khoản Hợp đồng tại thời điểm Hợp đồng chấm dứt hiệu lực
-            sẽ được đánh giá và
-            điều chỉnh (nếu
-            cần) để đảm bảo không thấp hơn Giá trị Tài khoản đảm bảo.
-          </p>
         </ul>
-      </div>
-    </div>
-
-    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
-      <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        GIẢI PHÁP Linh hoạt</p>
-      <div>
-        <p style="line-height: 150%;">
-          <b>Hình thức đóng phí đa dạng:</b> 1 lần, 5 năm, đóng bằng thời hạn bảo hiểm
-          Được lựa chọn và điều chỉnh giải pháp tài chính
-          <br />
-          • Lựa chọn thời hạn bảo hiểm và thời hạn đóng phí phù hợp với điều kiện của gia đình
-          <br />
-          • Lựa chọn và thay đổi định kỳ đóng phí linh hoạt (Đối với lựa chọn Đóng phí định kỳ)
-          <br />
-          <b>Đáp ứng nhu cầu tài chính cấp thiết</b>
-          <br />
-          • Tạm ứng từ Giá trị hoàn lại, rút một phần Giá trị Tài khoản Hợp đồng đáp ứng nhu cầu tài chính cấp thiết
-          <br />
-          • Khôi phục hiệu lực Hợp đồng sau khi Hợp đồng bị chấm dứt hiệu lực.
+        <p>
+          Bảo hiểm Mọi rủi ro tài sản là chương trình bảo hiểm toàn diện nhất, được xây dựng để bảo hiểm cho những thiệt
+          hại vật chất bất ngờ, không lường trước được xảy ra đối với những tài sản được bảo hiểm gây ra bởi các rủi ro
+          không bị loại trừ theo quy tắc bảo hiểm.
+          Ngoài các phạm vi chính nêu trên, tùy theo thông tin dịch vụ và khả năng chi trả của doanh nghiệp, Bảo Việt sẽ
+          tư vấn thiết kế bản chào phí với các quyền lợi bổ sung phù hợp.
         </p>
       </div>
     </div>
 
-    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="margin: 50px auto; display: flex; flex-direction: column;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        GIA TĂNG BẢO VỆ Gia đình</p>
-      <div>
-        <ul style="list-style:number; line-height: 150%;">
-          <p style="margin-top: 0; line-height:150%">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
-            bản thân và người
-            thân trong gia đình:
-            <br />
-            • Nhóm sản phẩm chăm sóc sức khỏe.
-            <br />
-            • Nhóm sản phẩm bảo vệ trước các rủi ro tai nạn.
-            <br />
-            • Nhóm sản phẩm miễn đóng phí khi gặp rủi ro.
-          </p>
-        </ul>
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
+        Tài liệu biểu mẫu</p>
+      <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
+        <img
+          style="width: 270px; height: 240px; object-fit: contain; border-top-left-radius: 10px; border-bottom-right-radius: 10px;"
+          src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
+        <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
+
+          <div
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
+            <div style="display: flex; gap: 10px; align-items: center;">
+              <img style="width: 17px; height: 19px;"
+                src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
+              <p style="margin: 0%;">Quy tắc bảo hiểm</p>
+            </div>
+            <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
+              href="https://baovietonline.com.vn/uploads/attachment/quy-tac-bao-hiem-bao-hiem-moi-rui-ro-tai-san-vi.pdf">
+              Tải xuống
+              <img style="width: 15px; height: 15px;"
+                src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
+            </a>
+          </div>
+          <div
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
+            <div style="display: flex; gap: 10px; align-items: center;">
+              <img style="width: 17px; height: 19px;"
+                src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
+              <p style="margin: 0%;">Giấy Yêu cầu bảo hiểm</p>
+            </div>
+            <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
+              href="https://baovietonline.com.vn/uploads/attachment/giay-yeu-cau-bao-hiem-bao-hiem-moi-rui-ro-tai-san-vi.xlsx">
+              Tải xuống
+              <img style="width: 15px; height: 15px;"
+                src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
+            </a>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
