--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -254,9 +254,9 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>C. Chi phí vận chuyển y tế cấp cứu</strong></p>
+              <p style="margin:0;"><strong>C. Chi phí vận chuyển y tế cấp cứu</strong></p>
 
-              <p style="margin-top:0;">(Bao gồm chi phí cho việc vận chuyển y tế, được đánh giá là cần thiết, đến một
+              <p style="margin:0;">(Bao gồm chi phí cho việc vận chuyển y tế, được đánh giá là cần thiết, đến một
                 địa điểm mới)</p>
             </td>
             <td style="height:25px; width:150px">Chi trả toàn bộ</td>
@@ -271,46 +271,46 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>E. Trợ cấp nằm viện</strong></p>
+              <p style="margin:0;"><strong>E. Trợ cấp nằm viện</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp trợ cấp ngày cho mỗi ngày trọn vẹn Người được bảo hiểm nằm viện)</p>
+              <p style="margin:0;">(Cung cấp trợ cấp ngày cho mỗi ngày trọn vẹn Người được bảo hiểm nằm viện)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">1.000.000đ/ngày</p>
+              <p style="margin:0;">1.000.000đ/ngày</p>
 
-              <p style="margin-top:0;">Tối đa 20.000.000đ</p>
+              <p style="margin:0;">Tối đa 20.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">1.000.000đ/ngày</p>
+              <p style="margin:0;">1.000.000đ/ngày</p>
 
-              <p style="margin-top:0;">Tối đa 40.000.000đ</p>
+              <p style="margin:0;">Tối đa 40.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>F. Hành lý và tư trang</strong></p>
+              <p style="margin:0;"><strong>F. Hành lý và tư trang</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
                 đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">5.000.000đ/đồ vật</p>
+              <p style="margin:0;">5.000.000đ/đồ vật</p>
 
-              <p style="margin-top:0;">Tối đa &nbsp;25.000.000đ</p>
+              <p style="margin:0;">Tối đa &nbsp;25.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">10.000.000đ/đồ vật</p>
+              <p style="margin:0;">10.000.000đ/đồ vật</p>
 
-              <p style="margin-top:0;">&nbsp;Tối đa 50.000.000đ</p>
+              <p style="margin:0;">&nbsp;Tối đa 50.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>G. Nhận hành lý chậm</strong></p>
+              <p style="margin:0;"><strong>G. Nhận hành lý chậm</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
                 do nhận hành lý chậm
                 ít nhất 8 tiếng)</p>
             </td>
@@ -320,28 +320,28 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>F. Hành lý và tư trang</strong></p>
+              <p style="margin:0;"><strong>F. Hành lý và tư trang</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
                 đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">5.000.000đ/đồ vật</p>
+              <p style="margin:0;">5.000.000đ/đồ vật</p>
 
-              <p style="margin-top:0;">Tối đa 25.000.000đ</p>
+              <p style="margin:0;">Tối đa 25.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">10.000.000đ/đồ vật</p>
+              <p style="margin:0;">10.000.000đ/đồ vật</p>
 
-              <p style="margin-top:0;">Tối đa 50.000.000đ</p>
+              <p style="margin:0;">Tối đa 50.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>G. Nhận hành lý chậm</strong></p>
+              <p style="margin:0;"><strong>G. Nhận hành lý chậm</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
                 do nhận hành lý chậm
                 ít nhất 8 tiếng)</p>
             </td>
@@ -351,29 +351,29 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>H. Tiền mang theo và Giấy tờ thông hành</strong></p>
+              <p style="margin:0;"><strong>H. Tiền mang theo và Giấy tờ thông hành</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị mất Tiền và Giấy tờ thông hành
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị mất Tiền và Giấy tờ thông hành
                 mang theo do mất cắp
                 hoặc thiên tai cộng với chi phí ăn ở. đi lại phát sinh thêm)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">Tiền mang theo 4.000.000đ</p>
+              <p style="margin:0;">Tiền mang theo 4.000.000đ</p>
 
-              <p style="margin-top:0;">Các chi phí khác 20.000.000đ</p>
+              <p style="margin:0;">Các chi phí khác 20.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">Tiền mang theo 4.000.000đ</p>
+              <p style="margin:0;">Tiền mang theo 4.000.000đ</p>
 
-              <p style="margin-top:0;">Các chi phí khác 20.000.000đ</p>
+              <p style="margin:0;">Các chi phí khác 20.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>I. Trách nhiệm cá nhân</strong></p>
+              <p style="margin:0;"><strong>I. Trách nhiệm cá nhân</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị khiếu nại về trách nhiệm pháp lý
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị khiếu nại về trách nhiệm pháp lý
                 đối với thương tật
                 thân thể hoặc hư hỏng tài sản do một sự kiện xảy ra trong chuyến đi)</p>
             </td>
@@ -383,29 +383,29 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>J. Chuyến đi bị trì hoãn</strong></p>
+              <p style="margin:0;"><strong>J. Chuyến đi bị trì hoãn</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp hãng vận tải công cộng xuất phát
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp hãng vận tải công cộng xuất phát
                 chậm ít nhất 8 tiếng)
               </p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">2.000.000đ cho mỗi 8 tiếng</p>
+              <p style="margin:0;">2.000.000đ cho mỗi 8 tiếng</p>
 
-              <p style="margin-top:0;">Tối đa 10.000.000đ</p>
+              <p style="margin:0;">Tối đa 10.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p style="margin-top:0;">2.000.000đ cho mỗi 8 tiếng</p>
+              <p style="margin:0;">2.000.000đ cho mỗi 8 tiếng</p>
 
-              <p style="margin-top:0;">Tối đa&nbsp;10.000.000đ</p>
+              <p style="margin:0;">Tối đa&nbsp;10.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>K. Mất tiền đặt cọc hay hủy bỏ chuyến đi</strong></p>
+              <p style="margin:0;"><strong>K. Mất tiền đặt cọc hay hủy bỏ chuyến đi</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các khoản đặt cọc và thanh toán không được
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với các khoản đặt cọc và thanh toán không được
                 hoàn lại do hủy chuyến
                 đi vì các lý do được nêu trong đơn bảo hiểm)</p>
             </td>
@@ -415,9 +415,9 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>L. Rút ngắn chuyến đi</strong></p>
+              <p style="margin:0;"><strong>L. Rút ngắn chuyến đi</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các chi phí không hoàn lại phát sinh từ việc
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với các chi phí không hoàn lại phát sinh từ việc
                 chuyến đi bị buộc
                 phải rút ngắn do thành viên gia đình bị chết hoặc bị thương tật/ốm đau nghiêm trọng hoặc do nổi loạn
                 hoặc bạo loạn dân sự)</p>
@@ -428,9 +428,9 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>M. Chơi golf 'Hole in One'</strong></p>
+              <p style="margin:0;"><strong>M. Chơi golf 'Hole in One'</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với những chi phí phát sinh sau khi đạt được cú
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với những chi phí phát sinh sau khi đạt được cú
                 đánh "hole in one"
                 trong chuyến đi)</p>
             </td>
@@ -440,9 +440,9 @@
           </tr>
           <tr>
             <td>
-              <p style="margin-top:0;"><strong>N. Bồi hoàn khấu trừ bảo hiểm của phương tiện thuê</strong></p>
+              <p style="margin:0;"><strong>N. Bồi hoàn khấu trừ bảo hiểm của phương tiện thuê</strong></p>
 
-              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với mức khấu trừ trong đơn bảo hiểm xe mà Người
+              <p style="margin:0;">(Cung cấp quyền lợi bảo hiểm đối với mức khấu trừ trong đơn bảo hiểm xe mà Người
                 được bảo hiểm phải trả
                 do tai nạn xảy ra với chiếc xe mà Người được bảo hiểm thuê)</p>
             </td>
@@ -466,11 +466,11 @@
         <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
 
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Quy tắc bảo hiểm</p>
+              <p style="margin:0;">Quy tắc bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/c1cac82b666e25113a05c54b9d500ee3.pdf">
@@ -480,11 +480,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Hướng dẫn bồi thường</p>
+              <p style="margin:0;">Hướng dẫn bồi thường</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/5106fda0d9ed7634cfb644365c8f48f0.pdf">
@@ -494,11 +494,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Quyền lợi bảo hiểm</p>
+              <p style="margin:0;">Quyền lợi bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/102408939e481b85487b8cd66d00884b.pdf">
@@ -544,7 +544,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
