--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -137,7 +137,7 @@
           <p class="consultant-title">
             Theo dõi thêm tin tức tại
           </p>
-          <p style="margin-top:0;">
+          <p style="margin:0;">
             facebook.com
           </p>
         </div>
@@ -177,35 +177,35 @@
           <br />
           Chăm sóc Y tế cao cấp
         </h3>
-        <p style="margin-top:0;"></p>
+        <p style="margin:0;"></p>
       </div>
     </div>
     <div class="card" onclick="window.location.href='/baohiemoto.html'">
       <img src="assets/2.png" alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Xe cơ giới</h3>
-        <p style="margin-top:0;"></p>
+        <p style="margin:0;"></p>
       </div>
     </div>
     <div class="card" onclick="window.location.href='/baohiemchayno.html'">
       <img src="assets/3.png" alt="Gói đầu tư thông minh" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Cháy, nổ bắt buộc</h3>
-        <p style="margin-top:0;"></p>
+        <p style="margin:0;"></p>
       </div>
     </div>
     <div class="card">
       <img src="assets/4.jpg" alt="Bảo vệ vượt trội" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo vệ vượt trội</h3>
-        <p style="margin-top:0;"></p>
+        <p style="margin:0;"></p>
       </div>
     </div>
     <div class="card">
       <img src="assets/5.jpg" alt="Tích lũy ưu việt" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Tích lũy ưu việt</h3>
-        <p style="margin-top:0;"></p>
+        <p style="margin:0;"></p>
       </div>
     </div>
   </section>
@@ -249,7 +249,7 @@
 
   <p
     style="font-size: 25px; text-transform: uppercase; font-weight: 600; color: #0060ae; text-align: center; margin: 0; margin-top: 50px;">
-    Yêu cầu tư vấn</p>
+    Đăng ký tư vấn miễn phí</p>
   <div class="container" style="background-color: #0060ae;">
     <form id="contact-form" style="display: flex; flex-direction: column; gap: 10px; max-width: 500px; margin: auto;">
       <div style="width: 100%; display: flex; gap: 10px; flex-direction: column;">
@@ -259,21 +259,20 @@
             placeholder="Nguyễn Văn A" required>
         </div>
         <div style="display: flex; flex-direction: column; gap: 5px;">
-          <label style="color: white; font-weight: 600;">Email quý khách:</label>
-          <input style="width: 100%; padding: 10px  10px; box-sizing: border-box; font-size: 14px" type="email"
-            id="email" placeholder="email@gmail.com" required>
+          <label style="color: white; font-weight: 600;">Số điện thoại quý khách:</label>
+          <input style="width: 100%; padding: 10px  10px; box-sizing: border-box; font-size: 14px" type="phone"
+            id="phone" placeholder="0952221123" required>
         </div>
       </div>
       <div style="display: flex; flex-direction: column; gap: 5px;">
         <label style="color: white; font-weight: 600;">Lời nhắn:</label>
         <textarea style="width: 100%; padding: 10px  10px; box-sizing: border-box; min-height: 300px; font-size: 14px"
-          id="message" placeholder="Lời nhắn" required></textarea>
+          id="message" placeholder="Tôi muốn tìm hiểu về bảo hiểm sức khoẻ" required></textarea>
       </div>
 
       <button
         style="width: 100%; padding: 10px  10px; box-sizing: border-box; font-size: 14px; font-weight: 600; text-transform: uppercase; color: #0060ae;"
-        type="submit">Gửi yêu
-        cầu</button>
+        type="submit">Đăng ký tư vấn</button>
     </form>
 
     <p id="status-message"></p>
@@ -309,7 +308,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
