--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -139,10 +139,10 @@
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi bảo hiểm Thương tật toàn bộ
             vĩnh viễn do tai nạn
           </li>
-          <p style="margin-top:0;">Chi trả quyền lợi bằng 100% Quyền lợi bảo hiểm Tử vong</p>
+          <p style="margin:0;">Chi trả quyền lợi bằng 100% Quyền lợi bảo hiểm Tử vong</p>
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi bảo hiểm Bệnh hiểm nghèo
           </li>
-          <p style="margin-top:0;">Ứng trước 50% Quyền lợi bảo hiểm Tử vong, tối đa 500 triệu đồng</p>
+          <p style="margin:0;">Ứng trước 50% Quyền lợi bảo hiểm Tử vong, tối đa 500 triệu đồng</p>
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Có thể lựa chọn Số tiền bảo hiểm tự
             động gia tăng 5% hàng năm
           </li>
@@ -253,7 +253,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
