--- a/baohiemintercare.html
+++ b/baohiemintercare.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -176,11 +176,11 @@
         <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
 
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Quy tắc Intercare</p>
+              <p style="margin:0;">Quy tắc Intercare</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/c1cac82b666e25113a05c54b9d500ee3.pdf">
@@ -190,11 +190,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">
+              <p style="margin:0;">
                 Quyền lợi bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
@@ -205,11 +205,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Bộ câu hỏi thường gặp</p>
+              <p style="margin:0;">Bộ câu hỏi thường gặp</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/102408939e481b85487b8cd66d00884b.pdf">
@@ -255,7 +255,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
