--- a/baohiemxemay.html
+++ b/baohiemxemay.html
@@ -48,7 +48,7 @@
           <ul class="submenu">
             <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
-            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemruirotaisan.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
             <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
             <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
@@ -151,11 +151,11 @@
           src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
         <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">
+              <p style="margin:0;">
                 Giấy yêu cầu bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
@@ -166,11 +166,11 @@
             </a>
           </div>
           <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 10px 25px; border-radius: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p style="margin-top:0;">Nghị định 67-2023</p>
+              <p style="margin:0;">Nghị định 67-2023</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/nghi-dinh-67-2023-bao-hiem-xe-may-vi.pdf">
@@ -217,7 +217,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
